CORS support for LOINC Terminology

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -35,6 +35,7 @@ aws.queueEnabled=false
 aws.validationSupport=false
 cdr.fhirServer=https://cnuc9zdola.execute-api.eu-west-2.amazonaws.com/dev
 npm.fhirServer=https://3cdzg7kbj4.execute-api.eu-west-2.amazonaws.com/poc/utility
+loinc.fhirServer=https://fhir.loinc.org
 validation.fhirServer=http://localhost:9001
 
 ##################################################
