--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
     </parent>
     <groupId>uk.nhs.england</groupId>
     <artifactId>IOPS-FHIR-Validation-Service</artifactId>
-    <version>6.10.0</version>
+    <version>6.10.1</version>
     <name>IOPS-FHIR-Validation-Service</name>
     <description>HAPI FHIR Validator using Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <kotlin.version>1.6.21</kotlin.version>
+        <java.version>21</java.version>
+        <kotlin.version>1.9.22</kotlin.version>
         <fhir.version>6.10.0</fhir.version>
         <swagger_version>2.1.12</swagger_version>
         <parser_version>2.0.30</parser_version>
@@ -219,8 +219,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
         </plugins>
