--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -4,8 +4,8 @@
     "version": "0.0.7-sprint-7-review"
   },
   {
-    "packageName": "uk.nhsdigital.r4.test",
-    "version": "2.8.15-prerelease"
+    "packageName": "fhir.r4.nhsengland.stu1",
+    "version": "1.1.0"
   },
   {
     "packageName": "hl7.fhir.uv.sdc",
