--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,19 +1,10 @@
 [
   {
     "packageName": "fhir.r4.ukcore.stu3.currentbuild",
-    "version": "0.0.7-sprint-7-review"
+    "version": "0.0.8-pre-release"
   },
   {
-    "packageName": "fhir.r4.nhsengland.stu1",
-    "version": "1.1.0"
-  },
-  {
-    "packageName": "hl7.fhir.uv.sdc",
-    "version": "3.0.0"
-  },
-  {
-    "packageName": "hl7.fhir.us.core",
-    "version": "3.1.1"
+    "packageName": "uk.pathology.r4",
+    "version": "0.0.0-prerelease"
   }
-
 ]
