--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,12 +15,15 @@ management:
 
 fhir:
   server:
-    name: IOPS FHIR Testing
+    name: NHS England Interoperability Standards FHIR Testing
     baseUrl: https://3cdzg7kbj4.execute-api.eu-west-2.amazonaws.com/poc/Conformance
-    version: 6.10.4
+    version: 6.10.5
 
-
-
+services:
+  R4: true
+  STU3: true
+  LOINC: false
+  R4B: false
 
 ###Remote terminology validation:
 
