--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -4,7 +4,11 @@
     "version": "0.0.8-pre-release"
   },
   {
-    "packageName": "uk.pathology.r4",
+    "packageName": "hl7.fhir.uv.ips",
+    "version": "1.1.0"
+  },
+  {
+    "packageName": "fhir.r4.nhsengland.diagnostics",
     "version": "0.0.0-prerelease"
   }
 ]
