--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -8,6 +8,18 @@
     "version": "1.1.0"
   },
   {
+    "packageName": "hl7.fhir.uv.sdc",
+    "version": "3.0.0"
+  },
+  {
+    "packageName": "hl7.fhir.uv.ipa",
+    "version": "1.0.0"
+  },
+  {
+    "packageName": "hl7.fhir.eu.laboratory",
+    "version": "0.1.0-ballot"
+  },
+  {
     "packageName": "uk.nhsengland.r4",
     "version": "0.0.0-prerelease"
   }
