--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,8 +16,8 @@ management:
 fhir:
   server:
     name: NHS England Interoperability Standards FHIR Testing
-    baseUrl: https://3cdzg7kbj4.execute-api.eu-west-2.amazonaws.com/poc/Conformance
-    version: 6.10.25
+    baseUrl: http://localhost:9001
+    version: 6.10.27
 
 services:
   R4: true
