Improved docker documentation

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ build/
 
 ### VS Code ###
 .vscode/
+/interoperability-standards-tools-skunkworks/.angular/cache/17.1.3/angular-webpack/a1dba4dffcba8d84d9c03b2ef4d54bb9f8f40d2d/0.pack
+/interoperability-standards-tools-skunkworks/.angular/cache/17.1.3/angular-webpack/a1dba4dffcba8d84d9c03b2ef4d54bb9f8f40d2d/index.pack
