--- a/pom.xml
+++ b/pom.xml
@@ -340,5 +340,48 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>awsRelease</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <target>
+                                        <exec executable="docker">
+                                            <arg value="tag"/>
+                                            <arg value="fhir-validator-r4:${project.version}"/>
+                                            <arg value="365027538941.dkr.ecr.eu-west-2.amazonaws.com/fhir-validator-r4:latest"/>
+                                        </exec>
+                                        <exec executable="docker">
+                                            <arg value="tag"/>
+                                            <arg value="fhir-validator-r4:${project.version}"/>
+                                            <arg value="365027538941.dkr.ecr.eu-west-2.amazonaws.com/fhir-validator-r4:${project.version}"/>
+                                        </exec>
+                                        <exec executable="docker">
+                                            <arg value="push"/>
+                                            <arg value="365027538941.dkr.ecr.eu-west-2.amazonaws.com/fhir-validator-r4:latest"/>
+                                        </exec>
+                                        <exec executable="docker">
+                                            <arg value="push"/>
+                                            <arg value="365027538941.dkr.ecr.eu-west-2.amazonaws.com/fhir-validator-r4:${project.version}"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
