--- a/pom.xml
+++ b/pom.xml
@@ -185,17 +185,25 @@
             <version>1.12.252</version>
         </dependency>
 
-        <!-- For stylesheet transform -->
+        <!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
         <dependency>
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
-            <version>2.7.3</version>
+            <version>2.7.2</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
             <artifactId>serializer</artifactId>
-            <version>2.7.3</version>
+            <version>2.7.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>12.4</version>
+        </dependency>
+
+
         <!-- flying saucer pdf -->
         <dependency>
             <groupId>org.xhtmlrenderer</groupId>
